doomami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doomami
  namespace: ogk
spec:
  type: ClusterIP
  selector:
    app:  doomami
  ports:
    - name: web
      port: 8080
      targetPort: 8080
