doomami/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: doomami
  namespace: ogk
spec:
  parentRefs:
    - name: gke-gateway
      namespace: gateway
  hostnames:
    - doomami.s9n.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: doomami
          port: 8080
